--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">CRTcpDemo</string>
     <string name="robot_connect_tittle">Robot Connect</string>
-    <string name="connect_robot">connect robot</string>
+    <string name="connect_robot">ON</string>
     <string name="change_power_on">power on</string>
     <string name="change_power_off">power off</string>
     <string name="enable">enable</string>
@@ -21,7 +21,7 @@
     <string name="notice_permission"> Not have permission </string>
     <string name="permission_text_camera"> Sorry that App needs some permissions to run.</string>
     <string name="exit_app">Exit APP</string>
-    <string name="disconnect_robot">disconnect robot</string>
+    <string name="disconnect_robot">OFF</string>
     <string name="low">Low</string>
     <string name="high">High</string>
     <string name="get_pos">Get Current Coordinate</string>
