--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CRTcpDemo</string>
+    <string name="app_name">Epsilon Controller</string>
     <string name="robot_connect_tittle">Robot Connect</string>
     <string name="connect_robot">ON</string>
     <string name="change_power_on">power on</string>
